# exchequer

./: .gitignore  CLAUDE_CODE.txt  README.md  create-jwt-key.sh  create-storage.sh  docker-compose.debugprod.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-dev.sh  init-prod.sh  make-backup.sh  make-sync.sh  restore-backup.sh  ruff.toml  run-alembic-upgrade.sh  run-debugprod.sh  run-in-api.sh  run.sh  show-api-logs.sh  sync.sh
postgres/: Dockerfile  initpg.sql
python-api/: .coveragerc  .env  .env.example  .gitignore  .pylintrc  AGENTS.md  Dockerfile  alembic.ini  api-tester.py  copyright-agreement-template.html  copyright-agreement-template.md  dev.sh  gunicorn_conf.py  pyproject.toml  ruff.toml  run-tests.sh
python-api/alembic/: env.py
python-api/alembic/versions/: 30ee5a72b0cc_add_linked_stripe_id.py  64b4319a2df2_add_type_to_envelope.py  a0ab344c0d2a_exchequer_initial_revision.py  a6ad18c02c9f_add_unique_index_to_user_id_on_.py  aeccfcff3ff1_add_row_level_security.py  b5a0a4bad179_add_stripe_id_for_users_subscriptions_.py  cb9e6eb58c65_add_integrations_dict_to_user.py
python-api/python_api/: abuse.py  db_conn.py  dependencies.py  gifts.py  mail.py  main.py  settings.py  streaming_tasks.py  task_deps.py  tracking.py  user_errors.py  utils.py  worker.py
python-api/python_api/app_routers/: __init__.py  bucket.py  entities.py  users.py  ynab.py
python-api/python_api/cli/: __init__.py  whoops.py
python-api/python_api/db/models/: __init__.py  base.py  models.py
python-api/python_api/integrations/: ynab.py
python-api/python_api/models/: __init__.py  actions.py  emails.py  entities.py  envelopes.py  subscriptions.py  users.py  ynab.py
python-api/python_api/repositories/: __init__.py  automated_emails.py  entities.py  transactions.py  users.py
python-api/python_api/routers/: __init__.py  dashboard.py  users.py
python-api/python_api/services/: bucket.py
python-api/python_api/sso/: __init__.py  apple.py  google.py
python-api/python_api/tasks/: __init__.py
python-api/templates/: base.html  base.txt  footer.html  footer.txt  password_reset.html  password_reset.txt  verification.html  verification.txt
python-api/tests/: conftest.py  docker-compose.yml  test_coerce_int.py  test_repo_compat.py  test_users.py
traefik/: traefik.yml
web-app/: app.vue  components.json  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
web-app/components/: Header.vue  (+5 more)
website/: nuxt.config.js  package-lock.json  package.json  tailwind.config.js
(+22 files in other folders)
